--- a/style-home.css
+++ b/style-home.css
@@ -1,7 +1,7 @@
 .cabecalho {
 	position: relative;
 	width: 940px;
-	margin: 0 auto;
+	margin: 0 0 20px 0;
 }
 
 html {
@@ -11,31 +11,55 @@ html {
 	247BA0
 	1B98E0
 	E8F1F2
-	1B98E0
 	00BFFF
 	87CEFA
 	00008B
 	C1C1C1*/
-    background: #c1c1c1;
+    background: #247BA0;
     padding: 20px 0;
 }
 
 ul {
-	display: inline-block;
+	display: flex;
+	flex-direction: row;
 	vertical-align: top;
 	width: 20%;
 	margin-right: 15%;
+}
+
+nav {
+	margin-left: 700px;
 }
 
 nav a {
     text-transform: uppercase;
 	color: #000000;
 	font-weight: bold;
-	font-size: 22px;
+	font-size: 30px;
 	text-decoration: none;
+	text-align: right;
 }
 
 nav a:hover {
 	color: #C78C19;
 	text-decoration: underline;
+}
+
+nav li {
+	margin: 0 0 0 15px;
+	display: inline;
+}
+
+.logo {
+	display: block;
+	margin: auto;
+	width: 40%;
+	flex-wrap: wrap;
+}
+
+.video {
+	width: 460px;
+	height: 280px;
+	margin: 50px 0px 35px 250px;
+	
 }
