--- a/style-home.css
+++ b/style-home.css
@@ -1,7 +1,10 @@
 .cabecalho {
 	position: relative;
-	width: 940px;
+	width: 100%;
+	height: 75px;
 	margin: 0 0 20px 0;
+	background: #247BA0;
+	
 }
 
 html {
@@ -16,7 +19,8 @@ html {
 	00008B
 	C1C1C1*/
     background: #247BA0;
-    padding: 20px 0;
+    padding: 0 0 20px 0;
+	max-width: 100%;
 }
 
 ul {
@@ -25,10 +29,11 @@ ul {
 	vertical-align: top;
 	width: 20%;
 	margin-right: 15%;
+	padding: 20px 0;
 }
 
 nav {
-	margin-left: 700px;
+	margin-left: 650px;
 }
 
 nav a {
@@ -62,4 +67,11 @@ nav li {
 	height: 280px;
 	margin: 50px 0px 35px 250px;
 	
+}
+
+.fundo {
+	width: 100%;
+	position: absolute;
+  	z-index: -1;
+	/*border: 15px solid #247BA0;*/
 }
