--- a/style-home.css
+++ b/style-home.css
@@ -63,21 +63,21 @@ nav li {
 
 .logo {
 	display: block;
-	margin: auto;
-	width: 40%;
+	margin: 35px auto auto auto;
+	width: 60%;
 	flex-wrap: wrap;
 }
 
 .video {
-	width: 460px;
+	width: 400px;
 	height: 280px;
-	margin: 50px 0px 35px 250px;
+	margin: 50px 0px 35px 50px;
 	
 }
 
 .fundo {
 	width: 100%;
 	position: absolute;
-  	z-index: -1;
+  	z-index: -2;
 	/*border: 15px solid #247BA0;*/
 }
