--- a/style-home.css
+++ b/style-home.css
@@ -98,3 +98,11 @@ nav li {
 	font-family: Georgia;
 	margin: 20px;
 }
+
+.rodape {
+	position: relative;
+	width: 100%;
+	height: 75px;
+	margin: 0 0 20px 0;
+	background: #247BA0;
+}
