--- a/style-home.css
+++ b/style-home.css
@@ -99,9 +99,9 @@ nav li {
 }
 
 .rodape {
-	position: relative;
+	position: absolute;
+	display: flex;
+	flex-direction: row;
 	width: 100%;
-	height: 75px;
-	margin: 0 0 20px 0;
-	background: #247BA0;
 }
+vortei viu
