terminando a página Home

--- a/style-home.css
+++ b/style-home.css
@@ -108,7 +108,7 @@ footer ul {
 	display: flex;
 }
 
-footer li {
+footer ul li {
 	position: relative;
 	justify-content: center;
 	list-style: none;
@@ -116,45 +116,47 @@ footer li {
 	cursor: pointer;
 }
 
-footer .github {
-	font-size: 96px;
+footer ul li a {
+	text-decoration: none;
+}
+
+footer ul li a .fa-brands {
+	font-size: 6em;
 	color: #222;
 }
 
-footer li::before {
+footer ul li::before {
+	font-family: "FontAwesome";
 	position: absolute;
 	top: 0;
 	left: 0;
-	font-size: 96px;
+	font-size: 6em;
 	height: 0;
 	overflow: hidden;
 	transition: 0.5s ease-in-out;
 }
 
-footer li:nth-child(1)::before {
-	content: url("/img/logoGH.png");
+footer ul li:nth-child(1)::before {
+	content: "\f16d";
 	background-image: linear-gradient(45deg, #f09433 0%, #E6683C 25%, #DC2743 50%, #CC2366 75%, #BC1888 100%);
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	border-bottom: 4px solid #DC2743;
 }
 
-footer li:nth-child(2)::before {
-	content: url(/img/logoGH.png);
+footer ul li:nth-child(2)::before {
+	content: "\f232";
 	color: #25D366;
 	border-bottom: 4px solid #25D366;
 }
 
-footer li:nth-child(3)::before {
-	content: url(/img/logoGH.png);
+footer ul li:nth-child(3)::before {
+	content: "\f099";
 	color: #1DA1F2;
 	border-bottom: 4px solid #1DA1F2;
 }
 
-footer li:hover::before {
+footer ul li:hover::before {
 	height: 100%;
-}
-
-footer img {
-	width: 250px;
 }
