--- a/style-home.css
+++ b/style-home.css
@@ -78,7 +78,7 @@ nav li {
 	width: 100%;
 	position: absolute;
   	z-index: -2;
-	/*border: 15px solid #247BA0;*/
+	/*border: 15px solid #247BA0; <-- temos que definir isso aqui tbm*/
 }
 
 .text {
@@ -133,8 +133,8 @@ footer ul li::before {
 	font-size: 96px;
 	height: 0;
 	overflow: hidden;
-	transition: 0.5s ease-in-out;
-}
+	transition: 0.5s ease-out;
+} 
 
 footer ul li:nth-child(1)::before {
 	content: "\f09b";
@@ -147,7 +147,6 @@ footer ul li:nth-child(1)::before {
 
 footer ul li:nth-child(2)::before {
 	content: "\f09b";
-	background-image: linear-gradient(45deg, #FA8128 0%, #ED7117 25%, #ED7014 50%, #FC6A03 75%, #DD571C 100%);
 	background-image: linear-gradient(45deg, #FFAE42 0%, #FF8C00 25%, #FF6700 50%, #FF4500 75%, #C0362C 100%);
 	background-clip: text;
 	-webkit-background-clip: text;
