--- a/style-home.css
+++ b/style-home.css
@@ -182,3 +182,16 @@ footer ul li:hover::before {
 	display: inline-block;
 }
 
+.imgper {
+	margin: 35px auto auto auto;
+	width: 300px;
+	height: 200px;
+	display: flex;
+	border: 5px solid #ffffff;
+	align-self: flex-end;
+}
+
+.container {
+	display: flex;
+	align-items: center;
+}
