--- a/style-home.css
+++ b/style-home.css
@@ -195,3 +195,11 @@ footer ul li:hover::before {
 	display: flex;
 	align-items: center;
 }
+
+.imgctrl {
+	margin: 35px auto auto auto;
+	width: 400px;
+	height: 300px;
+	display: flex;
+	border: 5px solid #ffffff;
+	align-self: flex-end;
