--- a/style-home.css
+++ b/style-home.css
@@ -156,11 +156,11 @@ footer ul li:nth-child(2)::before {
 
 footer ul li:nth-child(3)::before {
 	content: "\f09b";
-	background-image: linear-gradient(45deg, #662d91 0%, #720e9e 25%, #452c63 50%, #33006F 75%, #1d1160 100%);
+	background-image: linear-gradient(45deg, #00bfff 0%, #00FA9A 25%, #1c39bb 50%, #FF00FF 75%, #00FF7F 100%);
 	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	border-bottom: 4px solid #720e9e;
+	border-bottom: 4px solid #FF00FF;
 }
 
 footer ul li:hover::before {
